# lockfree

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  LICENSE  README.md  VCPKG.md  setup_dependencies.ps1  setup_dependencies.sh  vcpkg.json
.github/: README.md  dependabot.yml  pull_request_template.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  docs.yml  format-check.yml  security.yml
cmake/: lockfree_object_pool_config.cmake.in  test_simd.cpp
cmake/modules/: Simd.cmake
examples/: main_test_lockfree.cpp
include/lib/: thread_pool.cpp  thread_pool.hpp
include/lockfree/: lockfree.hpp
resources/: README.md  app.rc  create_icon.py
src/benchmark/: analysis_benchmarks.hpp  base.hpp  baseline_benchmarks.hpp  main_benchmark.hpp  multithreaded_benchmarks.hpp  pool_benchmarks.hpp  stress_benchmarks.hpp
